# ntrp

./: .gitignore  CMakeLists.txt  README.md
src/cl/: NTRPClient.h  main.cpp
src/lib/: JSON.h  ModelBase.h  ModelHandler.h  Player.h
src/srv/: NTRPConnection.h  NTRPConnectionFactory.h  NTRPServerApplication.cpp  NTRPServerApplication.h  main.cpp
